--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,7 @@
   </head>
   <body>
     <h1>Buscador de recetas</h1>
+    <input type="text" id="inputSearch">
+    <button type="button" id="buttonSearch"></button>
   </body>
 </html>
