cree la funcion print en search.js

--- a/public/busqueda.html
+++ b/public/busqueda.html
@@ -9,6 +9,8 @@
   <body>
     <h1>Búsqueda</h1>
     <input type="text" id="inputSearch">
-    <button type="button" id="buttonSearch"></button>
+    <button type="button" id="buttonSearch">Buscar</button>
+    <div id="app"></div>
+    <script src="../src/js/search.js"></script>
   </body>
 </html>
