cosas de la landing

--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,21 @@
 <html lang="en">
 
 <head>
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Reto Bedu API</title>
 </head>
 
 <body>
+
+
 
     <h1>Hackaton Bedu</h1>
 
     <div>
         <h2>Api elegida: </h2>
-        <a href="https://pokeapi.co/about">Pokeapi</a>
+        <a href="https://pokeapi.co/about" target="blank">Pokeapi</a>
     </div>
 
     <div>
