--- a/public/busqueda.html
+++ b/public/busqueda.html
@@ -11,9 +11,13 @@
   <body>
     <div class="container">
       <h1>Búsqueda</h1>
-      <div class="col-12">
-        <input type="text" id="inputSearch" class="form-control col-7">
-        <button type="button" id="buttonSearch" class="btn btn-primary col-3">Buscar</button>
+      <div class="row">
+        <div class="col-6">
+          <input type="text" id="inputSearch" class="form-control">
+        </div>
+        <div class="col-6">
+          <button type="button" id="buttonSearch" class="btn btn-primary">Buscar</button>
+        </div>
       </div>
     </div>
     <div id="app"></div>
