--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
         <a href="https://pokeapi.co/about" target="blank">Pokeapi</a>
     </div>
 
-    <div>
+    <div class="card">
         <h3>Explicacion del proyecto</h3>
         <p>Se busca aplicar los conocimientos vistos durante las clases, el fin de este reto es conectarnos a una API y
             mostrar lo siguiente: </p>
@@ -37,20 +37,109 @@
         </ul>
     </div>
 
+    <a href="busqueda.html"><button class="btn btn-primary">Ir a la búsqueda</button></a>
+
     <footer>
-        <h3>Nombre de los integrantes en del equipo</h3>
-        <ol>
-            <li>Dionicio Mata</li>
-            <li>Rodrigo Rosas Zamudio</li>
-            <li>Alan Manuel Ramos Cornejo</li>
-            <li>Gonzalo Ramos</li>
-            <li>Jaime Israel Vazquez Bernal</li>
-            <li>Grecia Cardona</li>
-            <li>Francisco</li>
-            <li>Roman Gonzales</li>
-            <li>Asael Hernandez</li>
-            <li>Arturo Arredondo</li>
-        </ol>
+        <section class="blog">
+            <section class="container blog">
+              <div class="row">
+                <div class="col">
+                  <article class="process-list">
+                    <div class="process">
+                      <div class="process-icon">
+                        <img src="https://static.vecteezy.com/system/resources/thumbnails/000/550/980/small/user_icon_001.jpg" alt="Build icon" />
+                      </div>
+                      <div class="process-description">
+                        <h3>Dionicio Mata</h3>
+                      </div>
+                    </div>
+                    <div class="process">
+                      <div class="process-icon">
+                        <img src="https://static.vecteezy.com/system/resources/thumbnails/000/550/980/small/user_icon_001.jpg" alt="Attract icon" />
+                      </div>
+                      <div class="process-description">
+                        <h3>Grecia Cardona</h3>
+                      </div>
+                    </div>
+                    <div class="process">
+                      <div class="process-icon">
+                        <img src="https://static.vecteezy.com/system/resources/thumbnails/000/550/980/small/user_icon_001.jpg" alt="Convert icon" />
+                      </div>
+                      <div class="process-description">
+                        <h3>Rodrigo Rosas</h3>
+                      </div>
+                    </div>
+                  </article>
+                </div>
+                <div class="col">
+                    <article class="process-list">
+                      <div class="process">
+                        <div class="process-icon">
+                          <img src="https://static.vecteezy.com/system/resources/thumbnails/000/550/980/small/user_icon_001.jpg" alt="Build icon" />
+                        </div>
+                        <div class="process-description">
+                          <h3>Alan Ramos</h3>
+                        </div>
+                      </div>
+                      <div class="process">
+                        <div class="process-icon">
+                          <img src="https://static.vecteezy.com/system/resources/thumbnails/000/550/980/small/user_icon_001.jpg" alt="Build icon" />
+                        </div>
+                        <div class="process-description">
+                          <h3>Gonzalo Ramos</h3>
+                        </div>
+                      </div>
+                      <div class="process">
+                        <div class="process-icon">
+                          <img src="https://static.vecteezy.com/system/resources/thumbnails/000/550/980/small/user_icon_001.jpg" alt="Attract icon" />
+                        </div>
+                        <div class="process-description">
+                          <h3>Luis Arredondo</h3>
+                        </div>
+                      </div>
+                      
+                      <div class="process">
+                        <div class="process-icon">
+                          <img src="https://static.vecteezy.com/system/resources/thumbnails/000/550/980/small/user_icon_001.jpg" alt="Convert icon" />
+                        </div>
+                        <div class="process-description">
+                          <h3>Jaime Vazquez</h3>
+                        </div>
+                      </div>
+                    </article>
+                  </div>
+        
+                <div class="col">
+                    <div class="process">
+                        <div class="process-icon">
+                          <img src="https://static.vecteezy.com/system/resources/thumbnails/000/550/980/small/user_icon_001.jpg" alt="Convert icon" />
+                        </div>
+                        <div class="process-description">
+                          <h3>Francisco -</h3>
+                        </div>
+                      </div>
+                      <div class="process">
+                        <div class="process-icon">
+                          <img src="https://static.vecteezy.com/system/resources/thumbnails/000/550/980/small/user_icon_001.jpg" alt="Convert icon" />
+                        </div>
+                        <div class="process-description">
+                          <h3>Román Gonzáles</h3>
+                        </div>
+                      </div>
+                      <div class="process">
+                        <div class="process-icon">
+                          <img src="https://static.vecteezy.com/system/resources/thumbnails/000/550/980/small/user_icon_001.jpg" alt="Convert icon" />
+                        </div>
+                        <div class="process-description">
+                          <h3>Asael Hernández</h3>
+                        </div>
+                      </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </section>
     </footer>
 
 </body>
